--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
             <version>2.19.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- log4j 2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
